# CloudBot

./: .gitignore  Dockerfile  README.md  compose.yaml  config.default.json  config.json.example  my_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pythonapp.yml
cloudbot/: __init__.py  __main__.py  bot.py  config.py
cloudbot/clients/: irc.py
cloudbot/util/: database.py  formatting.py  http.py
plugins/: admin_bot.py  aliases.py  arxiv.py  beans.py  bible.py  chain.py  chess.py  correction.py  cryptocurrency.py  duckhunt.py  duel.py  funtranslations.py  github.py  gmaps.py  godot.py  google_cse.py  google_search_plugin.py  gpt.py  grammar.py  hanb.py  hasutils.py  history.py  hookup.py  howlongtobeat.py  huggingface.py  jokes.py  lmgtfy.py  locate.py  metacritic.py  minecraft_ping.py  openweather.py  paste.py  pirate.py  pkg.py  pollinations.py  russian_roulette.py  vibegames.py  waifu.py  wikis.py  wttr.py  (+1 more)
plugins/core/: chan_track.py  core_misc.py
tests/core_tests/: config_test.py
tests/plugin_tests/: test_admin_bot.py
